--- a/PriceTag/app/build.gradle
+++ b/PriceTag/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/jsoup-1.8.1.jar')
+    compile files('libs/gson-2.3.1')
 }
