--- a/PriceTag/app/src/main/AndroidManifest.xml
+++ b/PriceTag/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.preco.milionarios.pricetag" >
+    package="com.preco.milionarios.pricetag">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -15,10 +15,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".pricetag.PriceTag"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,8 +27,7 @@
         </activity>
         <activity
             android:name=".PlacesObjects.ItensListView"
-            android:label="@string/title_activity_list_places" >
-        </activity>
+            android:label="@string/title_activity_list_places"></activity>
     </application>
 
 </manifest>
