--- a/PriceTag/app/build.gradle
+++ b/PriceTag/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/jsoup-1.8.1.jar')
     compile files('libs/gson-2.3.1')
+    compile 'com.google.android.gms:play-services:7.0.0'
 }
