--- a/PriceTag/app/src/main/AndroidManifest.xml
+++ b/PriceTag/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.preco.milionarios.pricetag" >
+    package="com.milionarios.pricetag" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -21,14 +21,14 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".pricetag.PriceTag"
+            android:name=".activity.PriceTag"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".PlacesObjects.ItensListView"
+            android:name=".activity.ItensListView"
             android:label="@string/title_activity_list_places" />
         <activity
-            android:name=".Login"
+            android:name=".activity.Login"
             android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
